# ngsatdata

./: .gitignore  LICENSE  Pipfile  README.md  __init__.py  pyproject.toml  requirements.txt  satdata_test.py  setup.cfg
base/: dataprovider.py  errors.py
providers/: __init__.py  channel.py  instrument.py  smdc.py  source.py
src/ngsatdata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ngsatdata/base/: dataprovider.py
src/ngsatdata/providers/: smdc.py
src/sat_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/satdata/base/: dataprovider.py  errors.py
src/satdata/providers/: channel.py  instrument.py  smdc.py  source.py
src/tests/: test_smdc.py
