[metadata]
name = sat_data
version = 1.0.0
author = Minh Duc, Nguyen
author_email = bsd@conqueror.pro
description = SatData - a Python library for fetching space weather datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bsd-conqueror/satdata
project_urls =
    Bug Tracker = https://github.com/bsd-conqueror/satdata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
